# polyglot_pdf

./: README.md  set_pkg_config_path.ps1
harfbuzz_ffi/: Cargo.toml  README.md  build.rs
harfbuzz_ffi/src/: main.rs
harfbuzz_font_subset/: Cargo.toml  README.md  build.rs
harfbuzz_font_subset/src/: glyph.rs  main.rs  main_glyph.rs
pdf_01/: Cargo.toml  README.md  build.rs  set_env.bat
pdf_01/src/: main.rs  main_ttf_parser_glyph_index.rs  main_ttf_parser_units_per_em.rs  pdf_font_info.rs  pdf_gen.rs  pdf_page.rs
pdf_02/: Cargo.toml  README.md  set_env.bat
pdf_02/src/: main.rs  main_harfbuzz_text_shape.rs  main_line_width.rs  main_rustybuzz.rs  main_text_layout.rs  page_geometry.rs  pdf_font_info.rs  pdf_gen.rs  pdf_text.rs  subset_builder.rs  text_layout.rs
pdf_02/text/: essay.txt
pdf_03_pango/: Cargo.toml  README.md  build.rs
pdf_03_pango/src/: main.rs  main_essay.rs  main_fully_justified.rs  main_start.rs
pdf_03_pango/text/: Readme.md
pdf_04_text_rotation/: Cargo.toml  README.md
pdf_04_text_rotation/src/: main.rs  main_01.rs  main_02.rs  main_03.rs  main_04.rs  main_05.rs
pdf_05_header/: Cargo.toml  README.md  set_env.bat
pdf_05_header/config/: config-linux.toml  config-windows.toml
pdf_05_header/src/: document.rs  main.rs
pdf_05_header/text/: essay.txt
pdf_06_text_styling/: Cargo.toml  README.md
pdf_06_text_styling/config/: config.toml
pdf_06_text_styling/src/: config.rs  document.rs  inline_parser.rs  main.rs  main_start_01.rs  main_start_02.rs
pdf_06_text_styling/text/: essay.txt
pdf_07_image_intro/: Cargo.toml  README.md
pdf_07_image_intro/img/: Readme.md
pdf_07_image_intro/src/: image_layout.rs  main.rs  main_01.rs  main_02.rs  main_03.rs  main_04.rs  main_05.rs  main_06.rs  main_07.rs  page_geometry.rs
pdf_08_image_layout/: Cargo.toml  README.md
pdf_08_image_layout/config/: config.toml
pdf_08_image_layout/img/: Readme.md
pdf_08_image_layout/src/: config.rs  document.rs  font_utils.rs  image_layout.rs  main.rs
pdf_09_image_block/: Cargo.toml  README.md
pdf_09_image_block/config/: config.toml
pdf_09_image_block/src/: config.rs  document.rs  image_block_parser.rs  image_layout.rs  main.rs  text_layout.rs
pdf_09_image_block/text/: essay.txt
pdf_10_bh_cmark/: Cargo.toml  README.md  set_env.bat
pdf_10_bh_cmark/config/: config.toml
pdf_10_bh_cmark/img/: Readme.md
pdf_10_bh_cmark/src/: config.rs  document.rs  font_utils.rs  image_layout.rs  main.rs
pdf_10_bh_cmark/text/: essay.txt
